--- a/jupyterhub/dockerfile
+++ b/jupyterhub/dockerfile
@@ -1,17 +1,19 @@
-FROM nvidia/cuda:12.6.2-cudnn-devel-ubuntu22.04
+# Базовый образ без GPU (используем стандартный Ubuntu 22.04)
+FROM ubuntu:22.04
 
+# Установка необходимых пакетов
 WORKDIR /srv/jupyterhub
 
 RUN apt-get update -y && \
-    apt-get install -y python3-pip nodejs npm && \
+    apt-get install -y python3-pip python3-venv nodejs npm && \
     pip3 install --no-cache-dir \
-        psycopg2-binary \
+        jupyterhub \
         dockerspawner \
-        jupyterhub-nativeauthenticator \
-        docker && \
+        jupyterhub-nativeauthenticator && \
     npm install -g configurable-http-proxy
 
-COPY config/jupyterhub_config.py /srv/jupyter/jupyterhub_config.py
+# Копирование конфигурационного файла JupyterHub
+COPY config/jupyterhub_config.py /srv/jupyterhub/jupyterhub_config.py
 
-CMD ["jupyterhub", "-f", "/srv/jupyter/jupyterhub_config.py"]
-
+# Запуск JupyterHub с указанием конфигурационного файла
+CMD ["jupyterhub", "-f", "/srv/jupyterhub/jupyterhub_config.py"]
