--- a/jupyterhub/dockerfile
+++ b/jupyterhub/dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update -y && \
     pip3 install --no-cache-dir \
         jupyterhub \
         dockerspawner \
+        psycopg2-binary \
         jupyterhub-nativeauthenticator && \
     npm install -g configurable-http-proxy
 
