--- a/2-task_jupyter-and-postgres/postgres/docker-compose.yml
+++ b/2-task_jupyter-and-postgres/postgres/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       timeout: 15s
       retries: 7
     networks:
-       - jupyter_network
+       - storytech_network
 networks:
-    jupyter_network:
-      name: jupyter_network
+    storytech_network:
+      name: storytech_network
