--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
@@ -7,4 +7,7 @@ scrape_configs:
     static_configs:
     - targets: ['node-exporter:9100']
 
-
+  - job_name: 'jupyterhub'
+    metrics_path: '/hub/metrics'
+    static_configs:
+      - targets: ['jupyterhub:8000']
