--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
@@ -11,3 +11,10 @@ scrape_configs:
     metrics_path: '/hub/metrics'
     static_configs:
       - targets: ['jupyterhub:8000']
+
+  - job_name: docker
+      # metrics_path defaults to '/metrics'
+      # scheme defaults to 'http'.
+
+    static_configs:
+      - targets: ["192.168.1.53:9323"]
