--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .env
 /3-task_grafana_and_alerts/prometheus_stack/grafana/
+/3-task_grafana_and_alerts/prometheus_stack/alertmanager/alertmanager.yml
