--- a/3-task_grafana_and_alerts/prometheus_stack/docker-compose.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/docker-compose.yml
@@ -55,21 +55,36 @@ services:
     networks:
       - storytech_network
 
-  # alertmanager:
-  #   image: prom/alertmanager:latest
-  #   restart: unless-stopped
-  #   container_name: alertmgr
-  #   ports:
-  #     - "9093:9093"
-  #   volumes:
-  #     - "./alertmanager:/config"
-  #     - alertmanager-data:/data
-  #   command: --config.file=/config/alertmanager.yml --log.level=debug
-  #   environment:
-  #     TZ: "Europe/Moscow"
-  #   networks:
-  #     - storytech_network
+  alertmanager:
+    image: prom/alertmanager:latest
+    restart: unless-stopped
+    container_name: alertmgr
+    ports:
+      - "9093:9093"
+    volumes:
+      - "./alertmanager:/config"
+     # - alertmanager-data:/data
+    command: --config.file=/config/alertmanager.yml --log.level=debug
+    environment:
+      TZ: "Europe/Moscow"
+    networks:
+      - storytech_network
 
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.49.1 #образ взят с гита гугла, в докер хабе перестали обновлять
+    container_name: cadvisor
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+     # - /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    networks:
+      - storytech_network
 
 networks:
     storytech_network:
