--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .env
 /3-task_grafana_and_alerts/prometheus_stack/grafana/
-/3-task_grafana_and_alerts/prometheus_stack/alertmanager/alertmanager.yml
+./3-task_grafana_and_alerts/prometheus_stack/alertmanager/alertmanager.yml
+alertmanager.yml
