--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
@@ -2,7 +2,7 @@
   - name: container_cpu_usage
     rules:
       - alert: HighContainerCPUUsage
-        expr: (rate(container_cpu_usage_seconds_total{container!="", image!=""}[5m]) * 100) > 80
+        expr: (sum(rate(container_cpu_usage_seconds_total[3m])) BY (instance, name) * 100) > 80
         for: 1m
         labels:
           severity: critical
