--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
@@ -2,7 +2,7 @@
   - name: container_cpu_usage
     rules:
       - alert: HighContainerCPUUsage
-        expr: (sum(rate(container_cpu_usage_seconds_total[3m])) BY (instance, name) * 100) > 80
+        expr: (sum(rate(container_cpu_usage_seconds_total[1m])) BY (instance, name) * 100) > 80
         for: 1m
         labels:
           severity: critical
@@ -13,7 +13,7 @@
 
 
 
-#alerts.yml
+
 #
 # groups:
 # - name: Example
@@ -21,12 +21,12 @@
 #
 #     - alert: InstanceDown
 #       expr: up == 0
-#       for: 15s
+#       for: 2m
 #       labels:
 #         severity: critical
 #       annotations:
 #         summary: "Instance [{{ $labels.instance }}] down"
-#         description: "[{{ $labels.instance }}] of job {{ $labels.job }} has been down for more than 15 seconds."
+#         description: "[{{ $labels.instance }}] of job {{ $labels.job }} has been down for more than 2 minutes."
 #
 # # - name: NodeMemUsgae
 #   # rules:
