--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
@@ -28,13 +28,13 @@ scrape_configs:
     static_configs:
       - targets: ['cadvisor:8080']
 
-
-# откуда это взялось?
-
-
   - job_name: docker
-      # metrics_path defaults to '/metrics'
-      # scheme defaults to 'http'.
-
     static_configs:
       - targets: ["192.168.1.53:9323"]
+#postgres exporter
+ - job_name: 'postgres'
+   static_configs:
+     - targets: ['postgres_exporter:9187']
+
+
+
