--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/prometheus.yml
@@ -32,9 +32,9 @@ scrape_configs:
     static_configs:
       - targets: ["192.168.1.53:9323"]
 #postgres exporter
- - job_name: 'postgres'
-   static_configs:
-     - targets: ['postgres_exporter:9187']
+  - job_name: postgres
+    static_configs:
+      - targets: ['postgres_exporter:9187']
 
 
 
