--- a/3-task_grafana_and_alerts/prometheus_stack/docker-compose.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/docker-compose.yml
@@ -87,11 +87,10 @@ services:
       - storytech_network
 
   postgres_exporter:
-    image: prometheuscommunity/postgres-exporter
+    image: quay.io/prometheuscommunity/postgres-exporter
     container_name: postgres_exporter
     environment:
       DATA_SOURCE_NAME: ${DATA_SOURCE_NAME}
-      #env DATA_SOURCE_NAME=postgresql://username:password@db_postgres:5432/db_name?sslmode=disable
     ports:
       - "9187:9187"
     networks:
