--- a/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
+++ b/3-task_grafana_and_alerts/prometheus_stack/prometheus/alert.yml
@@ -2,13 +2,16 @@
   - name: container_cpu_usage
     rules:
       - alert: HighContainerCPUUsage
-        expr: (sum(rate(container_cpu_usage_seconds_total{container!=""}[1m]) * 100 > 80
+        expr: (rate(container_cpu_usage_seconds_total{name=~".+"}[1m])) * 100 > 80
         for: 1m
         labels:
           severity: critical
         annotations:
-          summary: "High CPU usage on container {{ $labels.container }}"
-          description: "Container {{ $labels.container }} is using more than 80% CPU."
+          summary: "High CPU usage on container {{ $labels.name }}"
+          description: "Container {{ $labels.name }} is using more than 80% CPU."
+
+
+
 
 
 #
